--- a/analysis/siracon-outline.Rmd
+++ b/analysis/siracon-outline.Rmd
@@ -18,7 +18,6 @@ Outline of my 2022 SiRAcon 2022 presentation, "Making R work for you (with autom
 ```{r setup, message = FALSE, warning = FALSE}
 library(siracon2022)
 library(readr)
-library(gert)
 library(gh)
 library(purrr)
 library(dplyr)
@@ -124,7 +123,7 @@ repo_timeline <- filtered_gitlogs |>
   summarize(start = min(time), end = max(time)) |>
   arrange(start) |>
   mutate(group = case_when(
-    grepl("training", repo) ~ "training",
+    grepl("training", repo, fixed = TRUE) ~ "training",
     repo %in% c("rdev", "jbplot") ~ "development",
     TRUE ~ "notebooks"
   )) |>
