--- a/analysis/siracon-outline.Rmd
+++ b/analysis/siracon-outline.Rmd
@@ -727,7 +727,7 @@ Formal Methods:
 
 - [Planning with flare](https://increment.com/planning/formal-specifications-and-planning/)
 - [Hillel Wayne](https://hillelwayne.com)
-- [Learn TLA+](https://learntla.com/introduction/)
+- [Learn TLA+](https://learntla.com/)
 - [Alloy Documentation](https://alloy.readthedocs.io/en/latest/)
 
 ```{r testing, fig.width = 8.6, fig.height = 3.5}
