--- a/analysis/aca-travel.Rmd
+++ b/analysis/aca-travel.Rmd
@@ -1,10 +1,16 @@
 ---
 title: "ACA Travel Analysis"
+author: "John Benninghoff"
 date: '2022-04-24'
+file-modified: '2022-05-21'
+categories:
+order:
 output:
   html_notebook:
     theme:
       version: 5
+      preset: bootstrap
+    css: assets/extra.css
     toc: yes
     toc_float:
       collapsed: no
