--- a/analysis/setup-log.Rmd
+++ b/analysis/setup-log.Rmd
@@ -1,10 +1,16 @@
 ---
 title: "SiRAcon 2022 Setup Log"
+author: "John Benninghoff"
 date: '2022-04-24'
+file-modified: '2022-04-30'
+categories:
+order:
 output:
   html_notebook:
     theme:
       version: 5
+      preset: bootstrap
+    css: assets/extra.css
     toc: yes
     toc_float:
       collapsed: no
