--- a/analysis/aca-travel.Rmd
+++ b/analysis/aca-travel.Rmd
@@ -3,7 +3,7 @@ title: "ACA Travel Analysis"
 author: "John Benninghoff"
 date: '2022-04-24'
 file-modified: '2022-05-21'
-categories:
+categories: []
 order:
 output:
   html_notebook:
