--- a/analysis/setup-log.Rmd
+++ b/analysis/setup-log.Rmd
@@ -3,7 +3,7 @@ title: "SiRAcon 2022 Setup Log"
 author: "John Benninghoff"
 date: '2022-04-24'
 file-modified: '2022-04-30'
-categories:
+categories: []
 order:
 output:
   html_notebook:
