--- a/analysis/siracon-outline.Rmd
+++ b/analysis/siracon-outline.Rmd
@@ -3,7 +3,7 @@ title: "SiRAcon Presentation Outline"
 author: "John Benninghoff"
 date: '2022-04-24'
 file-modified: '2023-11-08'
-categories:
+categories: []
 order:
 output:
   html_notebook:
